# pnd_rl_gym_private

./: .gitignore  CORE_FLOW_ANALYSIS.md  LICENSE  MUJOCO_LOG.TXT  README.md  README_zh.md  WANDB_INTEGRATION.md  download_latest_log.sh  setup.py
deploy/deploy_mujoco/: deploy_mujoco.py
deploy/deploy_mujoco/configs/: adam_lite_12dof.yaml  adam_pro_12dof.yaml
deploy/deploy_real/: README.md  README.zh.md  config.py  deploy_demon.py  deploy_real.py  deploy_real_hybird.py  deploy_real_hybrid.py  deploy_real_onnx.py  deploy_real_onnx_cpu.py
deploy/deploy_real/common/: command_helper.py  remote_controller.py
deploy/deploy_real/configs/: adam_lite_12dof.yaml  adam_pro_12dof.yaml  adam_pro_12dof_hybird.yaml  adam_pro_12dof_hybrid.yaml  adam_sp_12dof.yaml
deploy/deploy_real/cpp_adam/: CMakeLists.txt  Controller.cpp  Controller.h  main.cpp  remote_controller.hpp
deploy/pre_train/adam_lite_12dof/: 01141426.pt  5000.pt  A_00_12181909_T_01.pt  A_00_12182052_L_00.pt  A_00_12191056_high_pos.pt  A_00_12191658_terrain.pt  A_00_12231340_scale_025.pt  C_00_12231827_terrainn.pt  C_00_12241139.pt  C_00_12241405_scale2_5.pt  (+20 more)
doc/: setup_en.md  setup_zh.md
legged_gym/envs/: __init__.py
legged_gym/scripts/: export_lstm_onnx.py  play.py  train.py
legged_gym/utils/: __init__.py  code_snapshot.py  helpers.py  task_registry.py  terrain.py  wandb_logger.py  wandb_runner.py
pnd_humanoid_robot/: setup.py
pnd_humanoid_robot/pnd_humanoid_robot_gym/: __init__.py
scripts/: test_onnx_LSTM_state.py  test_onnx_inference.py  test_onnx_instruction  test_onnx_vs_pytorch.py  test_wandb.py
(+32 files in other folders)
